# mesh_core

./: CMakeLists.txt  LICENSE  README.md  library.json
.github/workflows/: ci.yml
doc/: ZigBee Mesh路由与DV算法路由环路分析.md
include/: mesh_core.hpp
include/mesh_core/: config.hpp  lru_record.hpp  mesh.hpp  message.hpp  route_table.hpp  type.hpp  utils.hpp  version.hpp
include/mesh_core/detail/: copyable.hpp  log.h  lru_record.hpp  message.hpp  noncopyable.hpp
test/: simple.cpp  udp_mesh.cpp  unittest.cpp  usage.cpp  utils.hpp
